--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -30,7 +30,7 @@ $lh7:16px;  $lh7-820:14px;  $lh7-460:12px;
 // ЦВЕТА
 
 //header
-$headerBg: rgba(16, 16, 29, 0.9);
+$headerBg: rgba(16, 16, 29);
 
 //футер
 $footerBg: #3D4050;
@@ -43,6 +43,6 @@ $black: #000000;
 $darkgrey: #2A2B30;
 $grey: #BBBBBB;
 $darkblue: #272733;
-$lightgrey: #C3C3C3;
+$lightgrey: #fdfdfe;
 $borderBtn: #6F6D7B;
 $slategrey: #3D4050;
