--- a/scss/section/footer.scss
+++ b/scss/section/footer.scss
@@ -63,9 +63,11 @@
     font-size: $p5;
     line-height: $lh7;
     color: $lightgrey;
-    gap: 40px;
-    @media (max-width: 460px) {
-      gap: 20px;
+    .yandex-money {
+      margin: 0 40px;
+      @media (max-width: 1140px) {
+        margin: 5px 20px;
+      }
     }
 
     &__money {
@@ -94,14 +96,18 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    gap: 49px;
-    @media (max-width: 460px) {
-      gap: 20px;
-    }
+
     @media (max-width: 1140px) {
       border-left: none;
       padding: 15px 0 0;
       border-top: 1px solid $lightgrey;
+    }
+
+    .mail-link {
+      margin-right: 49px;
+      @media (max-width: 460px) {
+        margin-right: 15px;
+      }
     }
 
     &__link {
@@ -120,6 +126,7 @@
 
       &-img {
         padding-right: 13px;
+        height: 13px;
       }
     }
   }
