--- a/scss/main.css
+++ b/scss/main.css
@@ -633,6 +633,20 @@
   -o-transition: opacity 0.2s ease, visibility 0.2s ease;
   transition: opacity 0.2s ease, visibility 0.2s ease;
   overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: #3D4050 #43ABF0;
+}
+.ordering .select-elem__options::-webkit-scrollbar {
+  margin: 3px;
+  width: 7px;
+  border-radius: 5px;
+}
+.ordering .select-elem__options::-webkit-scrollbar-track {
+  background-color: #3D4050;
+}
+.ordering .select-elem__options::-webkit-scrollbar-thumb {
+  background: #43ABF0;
+  border-radius: 5px;
 }
 .ordering .select-elem__options-item {
   font-weight: 400;
@@ -647,15 +661,6 @@
 }
 .ordering .select-elem__options-item.isHover, .ordering .select-elem__options-item:hover {
   color: #43ABF0;
-}
-.ordering .select-elem__options::-webkit-scrollbar {
-  width: 7px;
-  background-color: #3D4050;
-  border-radius: 5px;
-}
-.ordering .select-elem__options::-webkit-scrollbar-thumb {
-  background: #43ABF0;
-  border-radius: 5px;
 }
 .ordering .select-native, .ordering .select-elem__title {
   border-radius: 3px;
