--- a/scss/section/ordering.scss
+++ b/scss/section/ordering.scss
@@ -344,6 +344,22 @@
         -o-transition: opacity .2s ease, visibility .2s ease;
         transition: opacity .2s ease, visibility .2s ease;
         overflow-y: scroll;
+        scrollbar-width: thin;
+        scrollbar-color: $slategrey $blue;
+
+        &::-webkit-scrollbar  {
+          margin: 3px;
+          width: 7px;
+          border-radius: 5px;
+        }
+        &::-webkit-scrollbar-track  {
+          background-color: $slategrey;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: $blue;
+          border-radius: 5px;
+        }
 
         &-item {
           font-weight: 400;
@@ -363,16 +379,6 @@
         }
       }
 
-      &__options::-webkit-scrollbar {
-        width: 7px;
-        background-color: $slategrey;
-        border-radius: 5px;
-      }
-
-      &__options::-webkit-scrollbar-thumb {
-        background: $blue;
-        border-radius: 5px;
-      }
     }
 
     &-native,
